# LSML

./: CMakeLists.txt  DESIGN.md  LSML Grammar.ebnf  README.md  SPEC.md
c/: README.md  lsml.c  lsml.h  lsml_cat.c  lsml_check.c  lsml_io.h  test_hm.c  test_io.c  test_mem_array.c  test_mem_table.c  test_read.c
